# seo-content-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent/: __init__.py  content_generator.py  keyword_research.py  main.py  seo_analyzer.py
agent/templates/: blog_post.json  landing_page.json
api/: __init__.py  routes.py  server.py
masumi_integration/: __init__.py  identity_manager.py  payment_client.py  webhook_handler.py
tests/: test_content.py  test_payments.py
