[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-content-agent"
version = "0.1.0"
description = "SEO Content Agent with Masumi Payment Integration"
authors = [{name = "SEO Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv==1.0.0",
    "nltk>=3.8",
    "textblob>=0.17",
    "requests>=2.31.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "masumi_integration*", "api*"]
